<resources>

    <string name="app_name">帮易帮</string>
    <string name="email">邮箱:</string>
    <string name="headphoto">头像</string>
    <string name="nikename">称呼</string>
    <string name="nike_hint">方便对方称呼您</string>
    <string name="sel_birth">请选择生日</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="secret">保密</string>
    <string name="school">学校</string>
    <string name="phone">手机</string>
    <string name="wechat">微信</string>
    <string name="QQ">QQ</string>
    <string name="birthday">生日</string>
    <string name="login_edittext_password">密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="display_pw">显示密码</string>
    <string name="login_edittext_password_again">确认密码</string>
    <string name="login_checkbox_remember">记住密码</string>
    <string name="login_button_renrne">登陆</string>
    <string name="login_button_register">注册</string>
    <string name="register_edittext_email">输入邮箱</string>
    <string name="register_edittext_password">输入密码</string>
    <string name="register_edittext_password_again">确认密码</string>
    <string name="register_button_next">下一步</string>
    <string name="register_next_edittext_nickname">输入昵称</string>
    <string name="register_next_text_photo">点击图片上传头像</string>
    <string name="register_next_button_ok">完成</string>
    <string name="register_next_button_jump">跳过</string>
    <string name="register_next_menu_photo">相册</string>
    <string name="register_next_menu_cam">拍照</string>
    <string name="register_toast_empty">输入不能为空！</string>
    <string name="register_toast_emailerror">email格式错误！</string>
    <string name="register_toast_error">密码输入不一致！</string>
    <string name="register_toast_cardfull">储存卡已满</string>
    <string name="waitingDialog">请稍后。。。</string>
    <string name="registerSuccess">注册成功</string>
    <string name="registerFaild">注册失败</string>
    <string name="loginSuccess">登录成功</string>
    <string name="loginFail">登录名或密码错误</string>
    <string name="netError">网络状态不佳，请检查设置</string>
    <!-- 储存user信息的文件 -->
    <string name="userFileName">STROEUSER</string>
    <string name="registerAlready">邮箱已被注册╮(╯▽╰)╭</string>
    <string name="registerING">注册ing</string>
    <string name="completeInfo">编辑ing</string>
    <string name="changepass">修改密码</string>
    <string name="publishTask">发布ing</string>
    <string name="searchTask">搜索ing</string>
    <string name="dialog_contact">请填写联系方式</string>
    <string name="describe">一句话描述:</string>
    <string name="hint_describe">请输入任务描述:地点，事件，时间</string>
    <string name="detail">备注:</string>
    <string name="hint_detail">请输入备注</string>
    <string name="moneyaward">金钱悬赏</string>
    <string name="spiritaward">精神鼓励</string>
    <string name="yuan">元</string>
    <string name="destination">求助目标人群:</string>
    <string name="hint_destination">请选择</string>
    <string name="location">发布人所在地:</string>
    <string name="limittime">截止至:</string>
    <string name="tx_limittime">请选择任务有效期</string>
    <string name="tx_location">请获取位置信息</string>
    <string name="tx_sele_place">您要找的地方是</string>
    <string name="tx_place_name">名称</string>
    <string name="tx_place_addr">地址</string>
    <string name="hint_dest_search">请输入目标人群所在地</string>
    <!-- 一下为登录时获取登录状态信息的sharepreference标识，login_tag为sharepreference文件标识 -->
    <string name="login_tag">MAP_SHARE_LOGIN_TAG</string>
    <string name="jsessionid">JSESSION_ID</string>
    <string name="login_email">MAP_LOGIN_EMAIL</string>
    <string name="login_password">MAP_LOGIN_PASSWORD</string>
    <string name="login_already">LOGIN_ALREADY</string>
    <!-- 存储位置信息sharepreference标识 -->
    <string name="location_tag">LOCATION_TAG</string>
    <string name="get_sucess">GET_SUCESS</string>
    <string name="addr_tag">ADDR_TAG</string>
    <string name="city_tag">CITY_TAG</string>
    <string name="longitude_tag">LONGITUDE_TAG</string>
    <string name="latitude_tag">LATITUDE_TAG</string>
    <string name="def_latitude">36.6677090000</string>
    <string name="def_longitude">117.1398400000</string>
    <string name="person_button_change">编辑信息</string>
    <string name="time_to">截止至：</string>
    <string name="reward">悬赏：</string>
    <string name="time_have">剩余</string>

</resources>